objects/AcctSeed__Transaction_Archive__b.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Inbound_Inventory_Movement__c</fullName>
        <label>Inbound Inventory Movement</label>
        <referenceTo>AcctSeedERP__Inbound_Inventory_Movement__c</referenceTo>
        <relationshipName>Inbound_Inventory_Movement_Trans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufacturing_Inventory_Movement__c</fullName>
        <label>Manufacturing Inventory Movement</label>
        <referenceTo>AcctSeedERP__Manufacturing_Inventory_Movement__c</referenceTo>
        <relationshipName>Manufacturing_Inventory_Movement_Trans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Outbound_Inventory_Movement__c</fullName>
        <label>Outbound Inventory Movement</label>
        <referenceTo>AcctSeedERP__Outbound_Inventory_Movement__c</referenceTo>
        <relationshipName>Outbound_Inventory_Movement_Trans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchase_Order_Inventory_Movement__c</fullName>
        <label>Purchase Order Inventory Movement</label>
        <referenceTo>AcctSeedERP__Purchase_Order_Inventory_Movement__c</referenceTo>
        <relationshipName>Purchase_Order_Inventory_Movement_Trans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order_Inventory_Movement__c</fullName>
        <label>Sales Order Inventory Movement</label>
        <referenceTo>AcctSeedERP__Sales_Order_Inventory_Movement__c</referenceTo>
        <relationshipLabel>Transaction Archives</relationshipLabel>
        <relationshipName>Transaction_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__AP_Disbursement__c</fullName>
        <label>AP Disbursement</label>
        <referenceTo>AcctSeed__AP_Disbursement__c</referenceTo>
        <relationshipName>APD_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <label>Accounting Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipName>Period_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Year__c</fullName>
        <label>Accounting Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amortization_Entry__c</fullName>
        <label>Amortization Entry</label>
        <referenceTo>AcctSeed__Scheduled_Revenue_Expense__c</referenceTo>
        <relationshipName>Amortization_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Cash_Receipt__c</fullName>
        <label>Billing Cash Receipt</label>
        <referenceTo>AcctSeed__Billing_Cash_Receipt__c</referenceTo>
        <relationshipName>BCR_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Line__c</fullName>
        <label>Billing Line</label>
        <referenceTo>AcctSeed__Billing_Line__c</referenceTo>
        <relationshipName>Billing_Line_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing__c</fullName>
        <label>Billing</label>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Transaction Archives</relationshipLabel>
        <relationshipName>Transaction_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Disbursement__c</fullName>
        <label>Cash Disbursement</label>
        <referenceTo>AcctSeed__Cash_Disbursement__c</referenceTo>
        <relationshipName>CD_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Flow_Category__c</fullName>
        <label>Cash Flow Category</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipName>CFC_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Receipt__c</fullName>
        <label>Cash Receipt</label>
        <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
        <relationshipName>Cash_Receipt_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Cube_Type__c</fullName>
        <label>Financial Cube Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Cube__c</fullName>
        <label>Financial Cube</label>
        <referenceTo>AcctSeed__Financial_Cube__c</referenceTo>
        <relationshipName>FC_Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Foreign_Amount__c</fullName>
        <label>Foreign Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Foreign_Currency__c</fullName>
        <label>Foreign Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Type__c</fullName>
        <label>GL Account Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <label>GL Variable 1</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>GLAV_1_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <label>GL Variable 2</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>GLAV_2_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <label>GL Variable 3</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>GLAV_3_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <label>GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipName>GL_Account_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Journal_Entry_Line__c</fullName>
        <label>Journal Entry Line</label>
        <referenceTo>AcctSeed__Journal_Entry_Line__c</referenceTo>
        <relationshipName>JE_Line_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipName>Ledger_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payable_Line__c</fullName>
        <label>Payable Line</label>
        <referenceTo>AcctSeed__Account_Payable_Line__c</referenceTo>
        <relationshipName>Payable_Line_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payable__c</fullName>
        <label>Payable</label>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>Transaction Archives</relationshipLabel>
        <relationshipName>Transaction_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipName>Project_Task_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipName>Project_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Report_Amount__c</fullName>
        <label>Report Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Day__c</fullName>
        <label>Time Card Day</label>
        <referenceTo>AcctSeed__Time_Card_Day__c</referenceTo>
        <relationshipName>Time_Card_Day_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Variable_1__c</fullName>
        <label>Time Card Variable 1</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>Time_Card_Var_1_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Variable_2__c</fullName>
        <label>Time Card Variable 2</label>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipName>Time_Card_Var_2_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>AcctSeed__TransactionArchivesIndex</fullName>
        <fields>
            <name>AcctSeed__Financial_Cube__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>AcctSeed__Transaction_Id__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Transaction Archives Index</label>
    </indexes>
    <label>Transaction Archive</label>
    <pluralLabel>Transaction Archives</pluralLabel>
</CustomObject>